# rust-cgi-sample

./: Cargo.toml  build.sh
src/cgi/: main.rs
src/server/: main.rs
