[package]
name = "rust-cgi-sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
httparse = "1.8.0"
nix = { version = "0.28.0", features = ["process", "fs"] }


[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "cgi"
path = "src/cgi/main.rs"
